// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<GroupBoxComponent /> snapshots > it matches the snapshot for Group Box style 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; position: absolute; padding: 0px 10px 0px 0px; box-sizing: border-box;"
  >
    <fieldset
      class="MuiBox-root css-12fxbv3"
    >
      <legend>
        Test
      </legend>
      <div
        style="position: relative; overflow: visible; color: black;"
      />
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`<GroupBoxComponent /> snapshots > it matches the snapshot for Line style 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; position: absolute; padding: 0px; box-sizing: border-box;"
  >
    <fieldset
      class="MuiBox-root css-4dydo6"
    >
      <div
        style="position: relative; overflow: visible; color: black;"
      />
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`<GroupBoxComponent /> snapshots > it matches the snapshot for Title Bar style 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; position: absolute; padding: 0px; box-sizing: border-box;"
  >
    <fieldset
      class="MuiBox-root css-4dydo6"
    >
      <div
        style="height: 20px; width: 100%; background-color: rgb(0, 0, 0); font-family: Liberation sans,sans-serif; font-weight: normal; font-style: normal; font-size: 0.875rem; text-align: left; color: rgb(0, 0, 0);"
      >
        Title
      </div>
      <div
        style="position: relative; overflow: visible; color: black;"
      />
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`<GroupBoxComponent /> snapshots > it matches the snapshot for no style 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; position: absolute; padding: 0px; box-sizing: border-box;"
  >
    <fieldset
      class="MuiBox-root css-a189jy"
    >
      <div
        style="position: relative; overflow: visible; color: black;"
      />
    </fieldset>
  </div>
</DocumentFragment>
`;
